# perf_aware_programming

./: .clang-format  CMakeLists.txt  build.sh  main.cpp
listings_asm/: CMakeLists.txt
run/: build.sh  clean.sh  config.sh
src/: CMakeLists.txt  main.cpp
